make naming consistent

--- a/GhostClipper.vbproj
+++ b/GhostClipper.vbproj
@@ -6,9 +6,9 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{96FD5847-477A-4EF2-B637-672E34D9773B}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <StartupObject>Ghost_Clipper.My.MyApplication</StartupObject>
-    <RootNamespace>Ghost_Clipper</RootNamespace>
-    <AssemblyName>Ghost Clipper</AssemblyName>
+    <StartupObject>GhostClipper.My.MyApplication</StartupObject>
+    <RootNamespace>GhostClipper</RootNamespace>
+    <AssemblyName>GhostClipper</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <MyType>WindowsForms</MyType>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
@@ -22,7 +22,7 @@
     <DefineDebug>true</DefineDebug>
     <DefineTrace>true</DefineTrace>
     <OutputPath>bin\Debug\</OutputPath>
-    <DocumentationFile>Ghost Clipper.xml</DocumentationFile>
+    <DocumentationFile>GhostClipper.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
@@ -32,7 +32,7 @@
     <DefineTrace>true</DefineTrace>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
-    <DocumentationFile>Ghost Clipper.xml</DocumentationFile>
+    <DocumentationFile>GhostClipper.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
   <PropertyGroup>
