--- a/GhostClipper.vbproj
+++ b/GhostClipper.vbproj
@@ -123,6 +123,7 @@
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
     <None Include="App.config" />
+    <None Include="README.md" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ghostbig-1.png.png" />
