--- a/App.config
+++ b/App.config
@@ -16,6 +16,9 @@
             <setting name="Location" serializeAs="String">
                 <value>0, 0</value>
             </setting>
+            <setting name="Version" serializeAs="String">
+                <value>0.0.0</value>
+            </setting>
         </GhostClipper.My.MySettings>
     </userSettings>
 </configuration>
