--- a/My Project/Settings.settings
+++ b/My Project/Settings.settings
@@ -8,5 +8,8 @@
     <Setting Name="Location" Type="System.Drawing.Point" Scope="User">
       <Value Profile="(Default)">0, 0</Value>
     </Setting>
+    <Setting Name="Version" Type="System.String" Scope="User">
+      <Value Profile="(Default)">0.0.0</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
